--- a/server/frontend/static/Home.html
+++ b/server/frontend/static/Home.html
@@ -8,7 +8,7 @@
 <body onload="checkSession()">
   <div style="display: flex; flex-direction: column">
     <div class="card" style="width: 50%; margin-top: 50px; align-self: center">
-      <img src="static/car_dealership.jpg" class="card-img-top" alt="..." />
+      <img src="static/car_dealership.jpg" class="card-img-top" alt="Car Dealership Image" />
       <div class="banner">
         <h5>Welcome to our Dealerships!</h5>
         <a href="/dealers" class="btn" style="background-color: aqua; margin: 10px"
@@ -17,26 +17,5 @@
       </div>
     </div>
   </div>
-  <script>
-    const logout = async (e) => {
-      //Include the code for logout here.
-    };
-
-    let checkSession = () => {
-      let curr_user = sessionStorage.getItem("username");
-
-      if (curr_user && curr_user !== "") {
-        document.getElementById("loginlogout").innerHTML =
-          '<span class="homepage_links">' +
-          curr_user +
-          "</span>" +
-          '<a class="homepage_links" onclick="logout()" href="/">Logout</a>';
-      } else {
-        document.getElementById("loginlogout").innerHTML =
-          '<a class="homepage_links" href="/login">Login</a>' +
-          '<a class="homepage_links"  href="/register">Register</a>';
-      }
-    };
-  </script>
 </body>
 {% endblock %}
