--- a/server/frontend/static/base.html
+++ b/server/frontend/static/base.html
@@ -18,56 +18,94 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <div>
-    <nav class="navbar navbar-expand-lg navbar-light">
-      <div class="container-fluid">
-        <h2 class="dealerships">Dealerships</h2>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarText"
-          aria-controls="navbarText"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a
-                class="nav-link {% block home_active %}{{ active }}{% endblock %}"
-                aria-current="page"
-                href="/"
-                >Home</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link {% block about_active %}{{ active }}{% endblock %}" href="/about"
-                >About Us</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link {% block contact_active %}{{ active }}{% endblock %}"
-                href="/contact"
-                >Contact Us</a
-              >
-            </li>
-          </ul>
-          <span class="navbar-text">
-            <div class="loginlink" id="loginlogout"></div>
-          </span>
+  <body>
+    <div>
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+          <h2 class="dealerships">Dealerships</h2>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarText"
+            aria-controls="navbarText"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a
+                  class="nav-link {% block home_active %}{{ active }}{% endblock %}"
+                  aria-current="page"
+                  href="/"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link {% block about_active %}{{ active }}{% endblock %}" href="/about"
+                  >About Us</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link {% block contact_active %}{{ active }}{% endblock %}"
+                  href="/contact"
+                  >Contact Us</a
+                >
+              </li>
+            </ul>
+            <span class="navbar-text">
+              <div class="loginlink" id="loginlogout"></div>
+            </span>
+          </div>
         </div>
-      </div>
-    </nav>
-  </div>
+      </nav>
+    </div>
 
-  <!-- home -->
-  {% block home %}{% endblock %}
-  <!-- about -->
-  {% block about %}{% endblock %}
-  <!-- contact -->
-  {% block contact %}{% endblock %}
+    <!-- home -->
+    {% block home %}{% endblock %}
+    <!-- about -->
+    {% block about %}{% endblock %}
+    <!-- contact -->
+    {% block contact %}{% endblock %}
+
+    <!-- scripts -->
+    <script>
+      const logout = async (e) => {
+        let logout_url = window.location.origin + "/logout";
+        const res = await fetch(logout_url, {
+          method: "GET",
+        });
+        const json = await res.json();
+        if (json) {
+          let username = sessionStorage.getItem("username");
+          sessionStorage.removeItem("username");
+          window.location.href = window.location.origin;
+          window.location.reload();
+          alert("Logging out " + username + "...");
+        } else {
+          alert("The user could not be logged out.");
+        }
+      };
+
+      let checkSession = () => {
+        let curr_user = sessionStorage.getItem("username");
+
+        if (curr_user && curr_user !== "") {
+          document.getElementById("loginlogout").innerHTML =
+            '<span class="homepage_links">' +
+            curr_user +
+            "</span>" +
+            '<a class="homepage_links" onclick="logout()" href="/">Logout</a>';
+        } else {
+          document.getElementById("loginlogout").innerHTML =
+            '<a class="homepage_links" href="/login">Login</a>' +
+            '<a class="homepage_links"  href="/register">Register</a>';
+        }
+      };
+    </script>
+  </body>
 </html>
