refactor dynamic pages

--- a/server/frontend/static/base.html
+++ b/server/frontend/static/base.html
@@ -71,6 +71,8 @@
     {% block about %}{% endblock %}
     <!-- contact -->
     {% block contact %}{% endblock %}
+    <!-- dynamic -->
+    {% block dynamic %}{% endblock %}
 
     <!-- scripts -->
     <script>
