refactor dynamic pages

--- a/server/frontend/static/dynamic.html
+++ b/server/frontend/static/dynamic.html
@@ -1,6 +1,4 @@
 {% extends "base.html" %}
 
 <!-- dynamic react app -->
-{% block dynamic %}
-<div>{% include "index.html" %}</div>
-{% endblock %}
+{% block dynamic %} {% include "index.html" %} {% endblock %}
