--- a/server/frontend/static/base.html
+++ b/server/frontend/static/base.html
@@ -77,7 +77,7 @@
     <!-- scripts -->
     <script>
       const logout = async (e) => {
-        let logout_url = window.location.origin + "/logout";
+        const logout_url = window.location.origin + "/djangoapp/logout";
         const res = await fetch(logout_url, {
           method: "GET",
         });
@@ -104,8 +104,8 @@
             '<a class="homepage_links" onclick="logout()" href="/">Logout</a>';
         } else {
           document.getElementById("loginlogout").innerHTML =
-            '<a class="homepage_links" href="/login">Login</a>' +
-            '<a class="homepage_links"  href="/register">Register</a>';
+            '<a class="homepage_links" href="/djangoapp/login">Login</a>' +
+            '<a class="homepage_links"  href="/djangoapp/register">Register</a>';
         }
       };
     </script>
