--- a/server/frontend/static/Home.html
+++ b/server/frontend/static/Home.html
@@ -5,7 +5,7 @@
 
 <!-- block home -->
 {% block home %}
-<body onload="checkSession()">
+<body>
   <div style="display: flex; flex-direction: column">
     <div class="card" style="width: 50%; margin-top: 50px; align-self: center">
       <img src="static/car_dealership.jpg" class="card-img-top" alt="Car Dealership Image" />
@@ -17,5 +17,10 @@
       </div>
     </div>
   </div>
+  <script>
+    document.getElementById("loginlogout").innerHTML =
+      '<a class="homepage_links" href="/login">Login</a>' +
+      '<a class="homepage_links"  href="/register">Register</a>';
+  </script>
 </body>
 {% endblock %}
