--- a/server/frontend/static/Home.html
+++ b/server/frontend/static/Home.html
@@ -16,7 +16,7 @@
 </div>
 <script>
   document.getElementById("loginlogout").innerHTML =
-    '<a class="homepage-links" href="/login">Login</a>' +
-    '<a class="homepage-links"  href="/register">Register</a>';
+    '<a class="auth-links" href="/login">Login</a>' +
+    '<a class="auth-links"  href="/register">Register</a>';
 </script>
 {% endblock %}
