--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -5,44 +5,50 @@
 
 <!-- block about -->
 {% block about %}
-<div class="card">
+<div class="container-fluid about">
   <div class="banner" name="about-header">
     <h1>About Us</h1>
     Welcome to Best Cars dealership, home to the best cars in North America. We deal in sale of
     domestic and imported cars at reasonable prices.
   </div>
-  <div class="card-wrapper">
-    <div class="card card-item">
-      <img class="card-img-top" src="/static/joanne-doe.jpg" alt="Card image" />
-      <div class="card-body">
-        <p class="title">Joanne Doe</p>
-        <p>CEO</p>
-        <p class="card-text">
-          I'm top-ranking executive in a company, responsible for the overall management and
-          strategic direction./p>
-        </p>
-        <p>joanne-doe@example.com</p>
+  <div class="card-row">
+    <div class="col-lg-4 card-wrapper">
+      <div class="card card-item">
+        <img class="card-img-top" src="/static/joanne-doe.jpg" alt="Card image" />
+        <div class="card-body">
+          <p class="title">Joanne Doe</p>
+          <p>CEO</p>
+          <p class="card-text">
+            I'm top-ranking executive in a company, responsible for the overall management and
+            strategic direction.
+          </p>
+          <p>joanne-doe@example.com</p>
+        </div>
       </div>
     </div>
-    <div class="card card-item">
-      <img class="card-img-top" src="/static/john-doe.jpg" alt="Card image" />
-      <div class="card-body">
-        <p class="title">John Doe</p>
-        <p>CTO</p>
-        <p class="card-text">
-          I'm a senior executive responsible for managing a company's technical operations and
-          developing its technology strategy.
-        </p>
-        <p>john-doe@example.com</p>
+    <div class="col-lg-4 card-wrapper">
+      <div class="card card-item">
+        <img class="card-img-top" src="/static/john-doe.jpg" alt="Card image" />
+        <div class="card-body">
+          <p class="title">John Doe</p>
+          <p>CTO</p>
+          <p class="card-text">
+            I'm a senior executive responsible for managing a company's technical operations and
+            developing its technology strategy.
+          </p>
+          <p>john-doe@example.com</p>
+        </div>
       </div>
     </div>
-    <div class="card card-item">
-      <img class="card-img-top" src="/static/julia-doe.jpg" alt="Card image" />
-      <div class="card-body">
-        <p class="title">Julia Doe</p>
-        <p>Sales</p>
-        <p class="card-text">I'm a sales representative, sales executive and sales manager</p>
-        <p>julia-doe@example.com</p>
+    <div class="col-lg-4 card-wrapper">
+      <div class="card card-item">
+        <img class="card-img-top" src="/static/julia-doe.jpg" alt="Card image" />
+        <div class="card-body">
+          <p class="title">Julia Doe</p>
+          <p>Sales</p>
+          <p class="card-text">I'm a sales representative, sales executive and sales manager</p>
+          <p>julia-doe@example.com</p>
+        </div>
       </div>
     </div>
   </div>
