--- a/server/frontend/static/Home.html
+++ b/server/frontend/static/Home.html
@@ -5,20 +5,18 @@
 
 <!-- block home -->
 {% block home %}
-<div style="display: flex; flex-direction: column">
-  <div class="card" style="width: 50%; margin-top: 50px; align-self: center">
+<div class="homepage">
+  <div class="card homepage-card">
     <img src="static/car_dealership.jpg" class="card-img-top" alt="Car Dealership Image" />
     <div class="banner">
       <h5>Welcome to our Dealerships!</h5>
-      <a href="/dealers" class="btn" style="background-color: aqua; margin: 10px"
-        >View Dealerships</a
-      >
+      <a href="/dealers" class="btn btn-info">View Dealerships</a>
     </div>
   </div>
 </div>
 <script>
   document.getElementById("loginlogout").innerHTML =
-    '<a class="homepage_links" href="/login">Login</a>' +
-    '<a class="homepage_links"  href="/register">Register</a>';
+    '<a class="auth-links" href="/login">Login</a>' +
+    '<a class="auth-links"  href="/register">Register</a>';
 </script>
 {% endblock %}
