--- a/server/frontend/static/base.html
+++ b/server/frontend/static/base.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="/static/style.css" />
     <link rel="stylesheet" href="/static/bootstrap.min.css" />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
     />
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
       crossorigin="anonymous"
     ></script>
   </head>
@@ -94,16 +94,16 @@
       };
 
       (function checkSession() {
-        const curr_user = sessionStorage.getItem("username");
+        const currUser = sessionStorage.getItem("username");
 
-        if (curr_user && curr_user !== "") {
+        if (currUser && currUser !== "") {
           sessionStorage.setItem("firstName", "{{ user.first_name }}");
           sessionStorage.setItem("lastName", "{{ user.last_name }}");
           document.getElementById("loginlogout").innerHTML =
-            '<span class="homepage_links curr_user">' +
-            curr_user +
+            '<span class="auth-links curr-user">' +
+            currUser +
             "</span>" +
-            '<a class="homepage_links" onclick="logout()">Logout</a>';
+            '<a class="auth-links" onclick="logout()">Logout</a>';
         }
       })();
     </script>
